[workspace]
members = [
    # Tasks
    "add",
    "comm",
    "perc",
    "paperio",
    "ini",
    "polka",
    "trust",
    "flatmap",
    "pstack",
    "chip8",
    "mpsc",
    "fswalk",
    "stdmacro",
    "gc",

    # Tools
    "tools/submit",
    "paperio/tools/wasm-launcher",
    "chip8/tools/console-runner",
]
resolver = "2"
